--- a/inst/scripts/CallDenovo.Rnw
+++ b/inst/scripts/CallDenovo.Rnw
@@ -21,7 +21,6 @@ With the above rules, we make a call of deletion (1=yes, 0=no) for
 each segment.
 
 <<callDeletion>>=
-stop("stop at callDeletion chunk")
 segmeans$family <- substr(segmeans$id, 1, 5)
 segmeans$pedId <- who(segmeans$id)
 ## we do not need to examine all rows.
@@ -94,7 +93,6 @@ w <- width(dset)/1000
 hist(log10(w), breaks=50, xlab="size of deletion in log10(kb)", main="")
 median.w <- round(median(log10(w)), 2)
 abline(v=median.w, col="blue")
-abline(v=median(ww.avg), col="blue")
 @
 \caption{Distribution of deletion sizes. The median deletion size is
   \Sexpr{round(2^median.w, 2)} kb.}
@@ -102,13 +100,12 @@ abline(v=median(ww.avg), col="blue")
 
 Call denovo.
 
-<<>>=
+<<callDenovo>>=
 ## if not deleted in offspring, we do not need to check the parents
 dset$isDenovo <- NA
 ## among the regions that are deleted in the offspring, check the parents
 ##deleted.in.offspring <- which(is.na(dSet$isDenovo))
 offspring.id <- unique(dset$id)
-cnt <- vector("list", length(offspring.id))
 cnt <- rep(NA, nrow(dset))
 parentRanges <- calledRanges[calledRanges$pedId == "father" | calledRanges$pedId == "mother", ]
 for(i in seq_along(offspring.id)){
@@ -127,7 +124,7 @@ dset$isDenovo <- ifelse(cnt > 0, FALSE, TRUE)
 @
 
 Among \Sexpr{nrow(dset)} deletions in the offspring,
-\Sexpr{sum(dSet$isDenovo)} were denovo.
+\Sexpr{sum(dset$isDenovo)} were denovo.
 
 
 \begin{figure}[tbh]
@@ -159,17 +156,56 @@ abline(v=median.w, col="blue")
 
 Construct the disjoint ranges and count the frequency.
 
-<<previouscall,eval=F>>=
+<<previouscall>>=
 dset.denovo <- dset[dset$isDenovo, ]
 subj.ir <- IRanges(start(dset.denovo), end(dset.denovo))
-disjoint.rd <- disjointRanges(dset.denovo, is.index=FALSE)
-disjoint.ranges <- IRanges(start(disjoint.rd), end(disjoint.rd))
-freq <- rep(NA, length(disjoint.ranges))
-for(i in seq_along(freq)){
-	query.ir <- disjoint.ranges[i, ]
-	freq[i] <- countOverlaps(query.ir, subj.ir)
+subj.ir <- subj.ir[order(start(subj.ir))]
+tmp <- unique(c(start(subj.ir), end(subj.ir)))
+tmp <- tmp[order(tmp)]
+starts <- tmp[seq(1, length(tmp), by=2)]
+ends <- tmp[seq(2, length(tmp), by=2)]
+disj.ir <- IRanges(starts, ends)
+matching.subj <- vector("list", length(disj.ir))
+for(i in seq_along(matching.subj)){
+	query.ir <- disj.ir[i, ]
+	tmp <- findOverlaps(query.ir, subj.ir)
+	matching.subj[[i]] <- matchMatrix(tmp)[, "subject"]
+	##freq[i] <- countOverlaps(query.ir, subj.ir)
 }
-disjoint.rd$freq <- freq
+disjoint.rd <- RangedData(disj.ir, freq=sapply(matching.subj, length))
+@
+
+1. Join adjacent regions based on distance (define loci to be within 50kb)
+
+<<distanceBetween>>=
+ends <- end(disjoint.rd)[-nrow(disjoint.rd)]
+starts <- start(disjoint.rd)[-1]
+tmp <- sort(c(ends, starts))
+dist <- diff(tmp)[seq(1, length(tmp), by=2)]
+fact <- cumsum(c(0, dist > 50e3))
+disjoint.rd$locus <- as.factor(fact)
+@
+
+\begin{figure}[tbh]
+  \centering
+<<denovoFreq,fig=TRUE,width=6,height=4>>=
+hist(disjoint.rd$freq, breaks=250, xlim=c(0,30))
+stop("denovoFreq")
+@
+
+2.  For hotspots, make a plot for each trio involved.  Is there a more
+efficient data summary
+
+Plot the region for an individual with a denovo event.
+
+
+
+
+
+
+
+
+<<>>=
 @
 
 
